rust/crates/greenbone-scanner-framework/src/snapshots/greenbone_scanner_framework__get_scans_id_results__tests__scan_results_from.snap
---
source: crates/greenbone-scanner-framework/src/get_scans_id_results.rs
expression: resp
---
[
  Result(
    id: 99,
    type: log,
  ),
  Result(
    id: 100,
    type: log,
  ),
]
