rust/crates/greenbone-scanner-framework/src/snapshots/greenbone_scanner_framework__get_scans_id_results__tests__scan_results_from_to.snap
---
source: src/get_scans_id_results.rs
expression: resp
---
[
  Result(
    id: 10,
    type: log,
  ),
  Result(
    id: 11,
    type: log,
  ),
  Result(
    id: 12,
    type: log,
  ),
  Result(
    id: 13,
    type: log,
  ),
  Result(
    id: 14,
    type: log,
  ),
  Result(
    id: 15,
    type: log,
  ),
  Result(
    id: 16,
    type: log,
  ),
  Result(
    id: 17,
    type: log,
  ),
  Result(
    id: 18,
    type: log,
  ),
  Result(
    id: 19,
    type: log,
  ),
  Result(
    id: 20,
    type: log,
  ),
  Result(
    id: 21,
    type: log,
  ),
  Result(
    id: 22,
    type: log,
  ),
  Result(
    id: 23,
    type: log,
  ),
  Result(
    id: 24,
    type: log,
  ),
  Result(
    id: 25,
    type: log,
  ),
  Result(
    id: 26,
    type: log,
  ),
  Result(
    id: 27,
    type: log,
  ),
  Result(
    id: 28,
    type: log,
  ),
  Result(
    id: 29,
    type: log,
  ),
  Result(
    id: 30,
    type: log,
  ),
  Result(
    id: 31,
    type: log,
  ),
  Result(
    id: 32,
    type: log,
  ),
  Result(
    id: 33,
    type: log,
  ),
  Result(
    id: 34,
    type: log,
  ),
  Result(
    id: 35,
    type: log,
  ),
  Result(
    id: 36,
    type: log,
  ),
  Result(
    id: 37,
    type: log,
  ),
  Result(
    id: 38,
    type: log,
  ),
  Result(
    id: 39,
    type: log,
  ),
  Result(
    id: 40,
    type: log,
  ),
  Result(
    id: 41,
    type: log,
  ),
  Result(
    id: 42,
    type: log,
  ),
  Result(
    id: 43,
    type: log,
  ),
  Result(
    id: 44,
    type: log,
  ),
  Result(
    id: 45,
    type: log,
  ),
  Result(
    id: 46,
    type: log,
  ),
  Result(
    id: 47,
    type: log,
  ),
  Result(
    id: 48,
    type: log,
  ),
  Result(
    id: 49,
    type: log,
  ),
  Result(
    id: 50,
    type: log,
  ),
  Result(
    id: 51,
    type: log,
  ),
  Result(
    id: 52,
    type: log,
  ),
  Result(
    id: 53,
    type: log,
  ),
  Result(
    id: 54,
    type: log,
  ),
  Result(
    id: 55,
    type: log,
  ),
  Result(
    id: 56,
    type: log,
  ),
  Result(
    id: 57,
    type: log,
  ),
  Result(
    id: 58,
    type: log,
  ),
  Result(
    id: 59,
    type: log,
  ),
  Result(
    id: 60,
    type: log,
  ),
  Result(
    id: 61,
    type: log,
  ),
  Result(
    id: 62,
    type: log,
  ),
  Result(
    id: 63,
    type: log,
  ),
  Result(
    id: 64,
    type: log,
  ),
  Result(
    id: 65,
    type: log,
  ),
  Result(
    id: 66,
    type: log,
  ),
  Result(
    id: 67,
    type: log,
  ),
  Result(
    id: 68,
    type: log,
  ),
  Result(
    id: 69,
    type: log,
  ),
  Result(
    id: 70,
    type: log,
  ),
  Result(
    id: 71,
    type: log,
  ),
  Result(
    id: 72,
    type: log,
  ),
  Result(
    id: 73,
    type: log,
  ),
  Result(
    id: 74,
    type: log,
  ),
  Result(
    id: 75,
    type: log,
  ),
  Result(
    id: 76,
    type: log,
  ),
  Result(
    id: 77,
    type: log,
  ),
  Result(
    id: 78,
    type: log,
  ),
  Result(
    id: 79,
    type: log,
  ),
  Result(
    id: 80,
    type: log,
  ),
  Result(
    id: 81,
    type: log,
  ),
  Result(
    id: 82,
    type: log,
  ),
  Result(
    id: 83,
    type: log,
  ),
  Result(
    id: 84,
    type: log,
  ),
  Result(
    id: 85,
    type: log,
  ),
  Result(
    id: 86,
    type: log,
  ),
  Result(
    id: 87,
    type: log,
  ),
  Result(
    id: 88,
    type: log,
  ),
  Result(
    id: 89,
    type: log,
  ),
  Result(
    id: 90,
    type: log,
  ),
  Result(
    id: 91,
    type: log,
  ),
  Result(
    id: 92,
    type: log,
  ),
  Result(
    id: 93,
    type: log,
  ),
  Result(
    id: 94,
    type: log,
  ),
  Result(
    id: 95,
    type: log,
  ),
  Result(
    id: 96,
    type: log,
  ),
  Result(
    id: 97,
    type: log,
  ),
  Result(
    id: 98,
    type: log,
  ),
  Result(
    id: 99,
    type: log,
  ),
]
